# qupil_assignment_A2_A3_backend

./: .env  README.md  google-ai-key.txt  pyproject.toml  test.py
schedule/: config.py  main.py  models.py  security.py
